# XENAI

./: README.md
Project_Xennovate_AI/research_ai/: README.md  pyproject.toml
Project_Xennovate_AI/research_ai/src/research_ai/: citations.bib  crew.py  main.py
Project_Xennovate_AI/research_ai/src/research_ai/config/: agents.yaml  tasks.yaml
Project_Xennovate_AI/research_ai/src/research_ai/output_file/: citations.bib  experimental_design.md  extracted_data.md  knowledge_graph.md  literature_survey.md  methods_analysis.md  paper_classification.md  plagiarism_report.md  presentation.md  qa_responses.md  report.md  research_problem.md  research_report.md  research_timeline.md  summaries.md  thesis_structure.md  translations.md  workflow_status.md
