[project]
name = "research_ai"
version = "0.1.0"
description = "research-ai using crewAI"
authors = [{ name = "Arun Jaisankar", email = "arunjothi2004@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
research_ai = "research_ai.main:run"
run_crew = "research_ai.main:run"
train = "research_ai.main:train"
replay = "research_ai.main:replay"
test = "research_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
